--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,10 +1,6 @@
 <h1>Artists<h1>
 
-  <ul>
+
   <% @artists.each do |a| %>
-  <ul><%= link_to a.name, artist_path(a)%></ul>
-  <% a.songs.each do |song| %>
-  <ul><%=link_to song.title, song_path(song) %></ul>
-  <% end %>
-  <% end %>
-  </ul>
+  <li><%=a.name%></li>
+  <%end%>
