--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Artists<h1>
 
-
   <% @artists.each do |a| %>
-  <li><%=a.name%></li>
-  <%end%>
+  <ul><%= link_to a.name, artist_path(a)%></ul>
+  <% a.songs.each do |song| %>
+  <ul><%=link_to song.title, song_path(song) %></ul>
+  <% end %>
+  <% end %>
+  </ul>
