--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,7 +3,7 @@
   <ul>
   <% @artists.each do |a| %>
   <ul><%= link_to a.name, artist_path(a)%></ul>
-  <% a.songs.each do |song| %>
+  <% @artist.songs.each do |song| %>
   <ul><%=link_to song.title, song_path(song) %></ul>
   <% end %>
   <% end %>
