--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,3 +1,8 @@
 <h1><%= @artist.name %></h1>
 
 <h3><%= pluralize(@artist.songs.count, 'Song') %></h3>
+<ul>
+  <% @artists.songs.each do |song| %>
+    <li><%= link_to song.title, song_path(song) %></li>
+  <% end %>
+</ul>
