--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,3 +1,9 @@
 <h1><%= @artist.name %></h1>
 
 <h3><%= pluralize(@artist.songs.count, 'Song') %></h3>
+
+<ul>
+  <% @artist.songs.each do |song| %>
+    <li><%= link_to song.title, post_path(p) %></li>
+  <% end %>
+</ul>
