Automatically backed up by Learn

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,4 +2,6 @@
   <% @artists.each do |a| %>
   <ul><%= link_to a.name, artist_path(a)%></ul>
 
-  <h3><%= pluralize(a.songs.count, 'Song') %></h3>
+  <%= pluralize(a.songs.count, 'Song') %>
+
+  <%end%>
