--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,7 +1,10 @@
 <h1>Artists</h1>
+  <ul>
   <% @artists.each do |a| %>
-  <ul><%= link_to a.name, artist_path(a)%></ul>
+  <%= link_to a.name, artist_path(a)%>
 
   <%= pluralize(a.songs.count, 'Song') %>
 
   <%end%>
+
+  </ul>
