--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,7 +3,7 @@
   <% @artists.each do |a| %>
   <li><%= link_to a.name, artist_path(a) %>
 
-  <%= a.songs_count%> <%=pluralize(a.songs_count), 'Song') %></li>
+  <%=pluralize(a.songs_count), 'Song') %></li>
 
   <%end%>
 
