--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Artists</h1>
   <ul>
   <% @artists.each do |a| %>
-  <li><%= link_to a.name, artist_path(a) %></li>
+  <li><%= link_to a.name, artist_path(a) %>
 
-  <%=pluralize(a.songs_count, 'Song') %>
+  <%=pluralize(a.songs_count, 'Song') %></li>
 
   <%end%>
 
