--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,7 +3,7 @@
   <% @artists.each do |a| %>
   <li><%= link_to a.name, artist_path(a) %>
 
-  <%=pluralize(a.song_count, 'Song') %></li>
+  <%=pluralize(a.song_count, 'song') %></li>
 
   <%end%>
 
