Automatically backed up by Learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,2 @@
-<%@songs.each do |song|%>
-  <%=song.artist.name%> - <%=song.title%>
-<%end%>  
+
+<%@song.artist.name%> - <%= link_to @song.title, song_path(@song) %> 
