--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,2 +1,2 @@
-
-<%=@song.artist_name%> - <%= link_to @song.title, song_path(@song) %>
+<%@songs.each do |s|%>
+<%=s.artist_name%> - <%= link_to s.title, song_path(s) %>
