--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,3 @@
 <%@songs.each do |s|%>
-<li><%=s.artist_name%> - <%= link_to s.title, song_path(s) %></li>
+<li>< <a href="<%= song_path(song) %>"> <%= song.artist_name %> - <%= song.title %></a></li>
 <%end%>
